# lam

./: .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  appveyor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: workflow.yml
docs/: 404.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/contrib/: architecture.html  building.html  index.html  styleguide.html
docs/doc/: search-index.js  settings.html  source-files.js
docs/doc/lam/: all.html  enum.BuildTarget.html  enum.Goal.html  fn.main.html  index.html  sidebar-items.js  struct.BuildOpt.html  struct.DumpOpt.html  struct.LAM.html
docs/doc/lam_beam/: all.html  index.html  sidebar-items.js  type.ExternalTerm.html
docs/doc/lam_bin/: all.html  index.html
docs/doc/lam_compiler/: all.html  index.html  sidebar-items.js
docs/doc/lam_emu/: all.html  index.html  sidebar-items.js
docs/doc/lam_rts_native/: all.html  fn.start.html  index.html  sidebar-items.js
docs/doc/lam_rts_wasm/: all.html  fn.start.html  index.html  sidebar-items.js
docs/doc/lam_rts_web/: all.html  fn.__wasm_bindgen_generated_start.html  fn.start.html  index.html  sidebar-items.js
docs/examples/: hello-world.html  index.html
docs/getting-started/: first-steps.html  how-lam-works.html  index.html  installation.html
docs/guides/: elixir-on-lam.html  embedding-lam.html  erlang-on-lam.html  index.html  linking-external-code.html  ocaml-on-lam.html  targetting-lam.html  using-lam-with-zap.html
docs/manual/: 404.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/manual/contrib/: architecture.html  building.html  index.html  styleguide.html
docs/manual/examples/: hello-world.html  index.html
docs/manual/getting-started/: first-steps.html  how-lam-works.html  index.html  installation.html
docs/manual/guides/: elixir-on-lam.html  embedding-lam.html  erlang-on-lam.html  index.html  linking-external-code.html  ocaml-on-lam.html  targetting-lam.html  using-lam-with-zap.html
docs/manual/ref/: cli.html  index.html
docs/ref/: cli.html  index.html
docs/ref/bytecode/: text-format.html
docs/ref/cli/: build.html  compile.html  default.html  dump.html  link.html
docs/ref/isa/: allocate.html  badmatch.html  clear.html  conditional-jump.html  deallocate.html  get-map-element.html  get-tuple-element.html  halt.html  index.html  jump.html  kill.html  label.html  make-lambda.html  make-list.html  make-map.html  make-tuple.html  monitor.html  move.html  peek-message.html  remove-message.html  restore-locals.html  return.html  self.html  send.html  shift-locals.html  (+5 more)
examples/: hello_joe.S  hello_joe.beam  hello_joe.cmi  hello_joe.erl  hello_joe.ml
examples/advent_of_code/: build.sh  day_1.S  day_1.beam  day_1.erl  day_2.S  day_2.beam  day_2.erl  lists.S  lists.beam  lists.erl  lists.lam  runner.S  runner.beam  runner.erl
examples/cat/: build.sh  cat.S  cat.beam  cat.erl  cat.lam
examples/empty/: bench.sh  empty.S  empty.beam  empty.erl
examples/fib/: bench.sh  build.sh  fib.S  fib.beam  fib.cmi  fib.erl  fib.lam  fib.ml
examples/fib_dumper/: build.sh  fib.S  fib.beam  fib.erl  fib.lam
examples/grep/: bench.sh  build.sh  erlang.S  erlang.beam  erlang.erl  erlang.lam  file.cmi  file.ml  grep.S  grep.beam  grep.cmi  grep.erl  grep.lam  grep.ml  lists.S  lists.beam  lists.erl  lists.lam  test_a.txt  test_b.txt  test_c.txt
examples/hello_joe/: build.sh  hello_joe.S  hello_joe.beam  hello_joe.erl  hello_joe.ml
examples/literals/: build.sh  literals.S  literals.beam  literals.erl  literals.lam
examples/readme/: hello.beam  hello.erl
examples/simple_send/: build.sh  send.S  send.beam  send.erl  send.lam
examples/single_process/: echo.beam  echo.cmi  echo.erl  echo.ml  inf.S  inf.beam  inf.cmi  inf.erl  inf.ml
examples/web/: index.html
lib/lam/: Cargo.toml
lib/lam-beam/: Cargo.toml
lib/lam-beam/src/: beam_reader.rs  byteops.rs  compact_term_reader.rs  lib.rs
lib/lam-bin/: Cargo.toml
lib/lam-bin/src/: beam_reader.rs  bingen.rs  build.rs  compile.rs  dump.rs  lib.rs  link.rs  main.rs  mod.rs  native_gen.rs  wasm_gen.rs
lib/lam-bin/tests/: holder.S  holder.beam  holder.erl
lib/lam-compiler/: Cargo.toml
lib/lam-compiler/src/: beam_reader.rs  bin.c  index.js  lib.rs  native_gen.rs  target.rs  translator.rs  wasm_gen.rs  web_gen.rs
lib/lam-dummy/: Cargo.toml
lib/lam-emu/: Cargo.toml
lib/lam-emu/src/: bytecode.rs  byteops.rs  coordinator.rs  emulator.rs  instr_ptr.rs  lib.rs  literal.rs  mailbox.rs  process.rs  process_queue.rs  process_registry.rs  program.rs  registers.rs  runner.rs  runtime.rs  scheduler.rs
lib/lam-rts/: Cargo.toml
lib/lam-rts-native/: Cargo.toml
lib/lam-rts-native/src/: lib.rs  native_runtime.rs
lib/lam-rts-wasm/: Cargo.toml
lib/lam-rts-wasm/src/: lib.rs
lib/lam-rts-web/: Cargo.toml
lib/lam-rts-web/src/: lib.rs  refs.rs  web_runtime.rs
lib/lam-rts/src/: lib.rs  mod.rs
lib/lam/src/: byteops.rs  lib.rs  program.rs
manual/: book.toml
manual/book/: 404.html  CNAME  index.html  introduction.html  print.html
manual/src/: SUMMARY.md  introduction.md
manual/theme/: index.hbs
spec/: LAM_ISA_Move.tla  README.md
spec/LAM_ISA_Move.toolbox/: .project  LAM_ISA_Move.tex  LAM_ISA_Move.tla.pmap  LAM_ISA_Move___Basic.launch  LAM_ISA_Move___Basic_SnapShot_1608382085328.launch  LAM_ISA_Move___Basic_SnapShot_1608383150336.launch  LAM_ISA_Move___Basic_SnapShot_1608383311839.launch  LAM_ISA_Move___Basic_SnapShot_1608383450903.launch  LAM_ISA_Move___Basic_SnapShot_1608383479937.launch  LAM_ISA_Move___Basic_SnapShot_1608383617970.launch  LAM_ISA_Move___Basic_SnapShot_1608384378577.launch  LAM_ISA_Move___Basic_SnapShot_1608384420164.launch  LAM_ISA_Move___Basic_SnapShot_1608384480168.launch  LAM_ISA_Move___Basic_SnapShot_1608384715162.launch
src/: lib.rs  main.rs
src/bytecode/: ast.rs  mod.rs  reader.rs
tests/: empty.beam  expr_arithmetic.S  expr_arithmetic.beam  expr_arithmetic.erl  expr_arithmetic.erl.actual  expr_arithmetic.erl.expect  run.sh
(+495 files in other folders)
