[package]
name = "lam"
description = "Leandro's Abstract Machine"
version = "0.1.0"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"

[[bin]]
name = "lam"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
binread = "1.4.0"
chrono = "0.4"
fern = { version = "0.6", features = [ "colored" ] }
log = "0.4"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "tcp", "rt-core" , "time"] }
