[package]
name = "lam-bin"
description = "LAM command line interface"
version = "0.0.1"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[[bin]]
name = "lam"
path = "src/main.rs"

[dependencies]
lam-emu = { path = "../lam-emu" }
lam-compiler = { path = "../lam-compiler" }

anyhow = "1.0"
chrono = "0.4"
fern = { version = "0.6", features = [ "colored" ] }
log = "0.4"
structopt = "0.3"
