[package]
name = "lam-bin"
description = "LAM command line interface"
version = "0.0.7"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[[bin]]
name = "lam"
path = "src/main.rs"

[dependencies]
lam-beam = { path = "../lam-beam" }
lam-emu = { path = "../lam-emu" }
lam-compiler = { path = "../lam-compiler" }

anyhow = "1.0"
chrono = "0.4"
log = "0.4"
env_logger="0.8"
structopt = "0.3"
