[package]
name = "lam-compiler"
description = "LAM compiler and code generation"
version = "0.0.6"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lam-beam = { path = "../lam-beam" }
lam-emu = { path = "../lam-emu" }
lam-rts-native = { path = "../lam-rts-native" }
lam-rts-wasm = { path = "../lam-rts-wasm" }
lam-rts-web = { path = "../lam-rts-web" }

anyhow = "1.0"
binread = "1.4"
chrono = "0.4"
log = "0.4"
walrus = "0.18"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num-bigint = "0.3"
