[package]
name = "lam-rts-native"
description = "LAM's Native Runtime System"
version = "0.0.2"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[dependencies]
lam-emu = { path = "../lam-emu" }

anyhow = "1.0"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

wee_alloc = "0.4"
