[package]
name = "lam-rts-native"
description = "LAM's Native Runtime System"
version = "0.0.3"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[dependencies]
lam-emu = { path = "../lam-emu" }

anyhow = "1.0"
log = "0.4"
env_logger="0.8"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

wee_alloc = "0.4"
num-bigint = { version = "0.3", features = ["serde"] }
