[package]
name = "lam-rts-wasm"
description = "LAM's WASM Runtime System"
version = "0.0.5"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lam-emu = { path = "../lam-emu" }
lam-rts-native = { path = "../lam-rts-native" }
