[package]
name = "lam-rts-web"
description = "LAM's Web Runtime System"
version = "0.0.3"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lam-emu = { path = "../lam-emu" }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  'Performance',
  'Window',
  'console'
] }
num-bigint = { version = "0.3", features = ["serde"] }
