[package]
name = "lam-rts-web"
description = "LAM's Web Runtime System"
version = "0.0.9"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lam-emu = { path = "../lam-emu" }

anyhow = "1.0"
log = "0.4"
console_log = "0.2"

lazy_static = "1.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  'Performance',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'console'
] }

num-bigint = { version = "0.3", features = ["serde"] }
